feat: update style language from sass to scss and add new SCSS files

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,7 +10,7 @@
     
     <div>
       <figure>
-        <img src="assets/ebook-cover.png" alt="Capa do eBook 30 dias em um monastério Budista">
+        <img src="assets/images/ebook-cover.png" alt="Capa do eBook 30 dias em um monastério Budista">
       </figure>
 
       <a href="">Quero receber no lançamento</a>
