feat: create landing page

--- a/src/app/about-publisher/about-publisher.html
+++ b/src/app/about-publisher/about-publisher.html
@@ -1,10 +1,14 @@
 <header>
-    <h2>Sobre a autora</h2>
-    
-    <p>
-        Desenvolvedora Full-Stack com 8 anos de experiência em startups e big techs. Após um burnout severo, decidiu fazer uma pausa radical e se refugiar em um monastério budista no interior.
-    </p>
-    <p>
-        Durante 30 dias de silêncio, meditação e reflexão profunda, descobriu como aplicar os ensinamentos budistas milenares aos desafios modernos do desenvolvimento de software.
-    </p>
+  <h3>Sobre a <strong>autora</strong></h3>
+
+  <p>
+    Desenvolvedora Full-Stack com 8 anos de experiência em startups e big techs.
+    Após um burnout severo, decidiu fazer uma pausa radical e se refugiar em um
+    monastério budista no interior.
+  </p>
+  <p>
+    Durante 30 dias de silêncio, meditação e reflexão profunda, descobriu como
+    aplicar os ensinamentos budistas milenares aos desafios modernos do
+    desenvolvimento de software.
+  </p>
 </header>
