--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
+
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+    --color-beige: #FFF0DD;
+    --color-light-yellow: #FCE5C6;
+    --color-yellow: #FAA127;
+    --color-brown: #B26700;
+    
+}
+
+html,body {
+    font-family: "Share Tech Mono", monospace;
+
+}
+
